--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,19 +7,7 @@
 @import "tooltip.css";
 
 .button {
-  @apply bg-indigo-600 border border-transparent rounded-md py-2 px-4 inline-flex justify-center text-sm leading-5 font-medium text-white transition-all duration-150 ease-in-out;
-}
-
-.button:hover {
-  @apply bg-gray-700;
-}
-
-.button:focus {
-  @apply outline-none border-gray-900 shadow-outline-gray;
-}
-
-.button:active {
-  @apply bg-gray-900;
+  @apply bg-indigo-600 border border-transparent rounded-md py-2 px-4 inline-flex justify-center text-sm leading-5 font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
 
 .button-outline {
