--- a/lib/plausible_web/templates/layout/site_settings.html.eex
+++ b/lib/plausible_web/templates/layout/site_settings.html.eex
@@ -9,7 +9,7 @@
     <div class="lg:grid lg:grid-cols-12 lg:gap-x-5 mt-6">
       <div class="py-6 px-2 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
         <div class="lg:hidden">
-          <select class="mt-1 form-select block w-full pl-3 pr-10 py-2 text-base leading-6 border-gray-300 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 sm:text-sm sm:leading-5 transition ease-in-out duration-150">
+          <select class="mt-1 form-select block w-full pl-3 pr-10 py-2 text-base leading-6 border-gray-300 focus:outline-none focus:ring focus:border-blue-300 sm:text-sm sm:leading-5 transition ease-in-out duration-150">
             <option selected>General</option>
 
             <option>Password</option>
