--- a/lib/plausible_web/templates/site/settings_general.html.eex
+++ b/lib/plausible_web/templates/site/settings_general.html.eex
@@ -1,10 +1,13 @@
 <%= form_for @changeset, "/#{URI.encode_www_form(@site.domain)}/settings", fn f -> %>
   <div class="shadow sm:rounded-md sm:overflow-hidden">
     <div class="bg-white py-6 px-4 space-y-6 sm:p-6">
-      <div>
+      <header class="relative">
         <h2 class="text-lg leading-6 font-medium text-gray-900">General information</h2>
         <p class="mt-1 text-sm leading-5 text-gray-500">Update your billing information. Please note that updating your location could affect your tax rates.</p>
-      </div>
+        <%= link(to: "https://docs.plausible.io/general/", target: "_blank") do %>
+          <svg class="w-6 h-6 absolute top-0 right-0 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+        <% end %>
+      </header>
 
       <div class="grid grid-cols-4 gap-6">
         <div class="col-span-4 sm:col-span-2">
