--- a/lib/plausible_web/templates/email/spike_notification.html.eex
+++ b/lib/plausible_web/templates/email/spike_notification.html.eex
@@ -1,23 +1,28 @@
-There are currently <%= @current_visitors %> visitors on <%= @site.domain %>.
+There are currently <%= @current_visitors %> visitors on <%= link(@site.domain, to: "https://" <> @site.domain) %>.
 <br />
 <br />
 The top 3 sources for current visitors:<br />
-<table cellpadding="0" cellspacing="0" width="640" align="center" border="1">
-<tr>
-<td>
-<table cellpadding="0" cellspacing="0" width="640" align="left" border="1">
-  <%= for %{"name" => source, "count" => visitors} <- @sources do %>
-    <tr>
-      <td><%= source %><td>
-      <td><%= visitors %></td>
-    </tr>
-  <% end %>
+
+<table width="100%" cellpadding="0" cellspacing="0" style="max-width: 400px;">
+    <thead>
+      <tr>
+        <th scope="col"><b>Page</b></th>
+        <th scope="col"><b>Visitors</b></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= for %{"name" => source, "count" => visitors} <- @sources do %>
+        <tr>
+          <td valign="top"><%= source %></td>
+          <td valign="top"><%= visitors %></td>
+        </tr>
+      <% end %>
+    </tbody>
 </table>
-</td>
-</tr>
-</table>
+
 <%= if @link do %>
-  View dashboard: @link
+<br /><br />
+View dashboard: @link
 <% end %>
 <br /><br />
 --
