--- a/lib/plausible_web/templates/email/spike_notification.html.eex
+++ b/lib/plausible_web/templates/email/spike_notification.html.eex
@@ -1,25 +1,11 @@
 There are currently <%= @current_visitors %> visitors on <%= link(@site.domain, to: "https://" <> @site.domain) %>.
-<br />
-<br />
 <%= if Enum.count(@sources) > 0 do %>
+  <br />
+  <br />
   The top 3 sources for current visitors:<br />
-
-  <table width="100%" cellpadding="0" cellspacing="0" style="max-width: 400px;">
-      <thead>
-        <tr>
-          <th scope="col"><b>Page</b></th>
-          <th scope="col"><b>Visitors</b></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= for %{"name" => source, "count" => visitors} <- @sources do %>
-          <tr>
-            <td valign="top"><%= source %></td>
-            <td valign="top"><%= visitors %></td>
-          </tr>
-        <% end %>
-      </tbody>
-  </table>
+  <%= for %{name: source, count: visitors} <- @sources do %>
+    <%= source %> - <%= visitors %> visitors<br />
+  <% end %>
 <% end %>
 
 <%= if @link do %>
