--- a/lib/plausible_web/templates/auth/register_form.html.eex
+++ b/lib/plausible_web/templates/auth/register_form.html.eex
@@ -3,69 +3,63 @@
   <div class="text-xl font-medium">Set up privacy-friendly analytics with just a few clicks</div>
 </div>
 
-<div>
-  <div class="w-full max-w-3xl mt-4 mx-auto flex">
-    <%= form_for @changeset, "/register", [class: "w-full max-w-md mx-auto bg-white shadow-md rounded px-8 py-6 mb-4 mt-8", id: "register-form"], fn f -> %>
-      <h2 class="text-xl font-black">Enter your details</h2>
-      <div class="my-4">
-        <%= label f, :name, "Full name", class: "block text-gray-700 text-sm font-bold mb-2" %>
-        <%= text_input f, :name, class: "transition bg-gray-100 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300", placeholder: "Jane Doe" %>
-        <%= error_tag f, :name %>
+<div class="w-full max-w-3xl mt-4 mx-auto flex">
+  <%= form_for @changeset, "/register", [class: "w-full max-w-md mx-auto bg-white shadow-md rounded px-8 py-6 mb-4 mt-8", id: "register-form"], fn f -> %>
+    <h2 class="text-xl font-black">Enter your details</h2>
+    <div class="my-4">
+      <%= label f, :name, "Full name", class: "block text-sm font-medium text-gray-700" %>
+      <div class="mt-1">
+        <%= text_input f, :name, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md", placeholder: "Jane Doe" %>
       </div>
-      <div class="my-4">
-        <%= label f, :email, class: "block text-gray-700 text-sm font-bold mb-2" %>
-        <p class="text-gray-600 text-xs mt-1 mb-2">No spam, guaranteed.</p>
-        <%= email_input f, :email, class: "transition bg-gray-100 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300", placeholder: "example@email.com" %>
-        <%= error_tag f, :email %>
-      </div>
-
-      <%= if PlausibleWeb.Captcha.enabled?() do %>
-        <div class="mt-4">
-          <div class="h-captcha" data-sitekey="<%= PlausibleWeb.Captcha.sitekey() %>"></div>
-          <%= if assigns[:captcha_error] do %>
-            <div class="text-red-500 text-xs italic mt-3"><%= @captcha_error %></div>
-          <% end %>
-          <script src="https://hcaptcha.com/1/api.js" async defer></script>
-        </div>
-      <% end %>
-
-      <%= submit "Start my free trial →", class: "button mt-4 w-full" %>
-
-      <p class="text-center text-gray-600 text-xs mt-4">
-        Already have an account? <%= link("Log in", to: "/login", class: "underline text-gray-800") %> instead.
-      </p>
-    <% end %>
-    <div class="pt-12 pl-8 hidden md:block">
-      <ul class="mt-2 leading-loose">
-        <li>
-          <svg class="feather text-indigo-600 mr-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-            <polyline points="22 4 12 14.01 9 11.01"/>
-          </svg>
-          Quick and easy to set up
-        </li>
-        <li>
-          <svg class="feather text-indigo-600 mr-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-            <polyline points="22 4 12 14.01 9 11.01"/>
-          </svg>
-          No credit card required
-        </li>
-        <li>
-          <svg class="feather text-indigo-600 mr-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-            <polyline points="22 4 12 14.01 9 11.01"/>
-          </svg>
-          Unlimited use during the trial
-        </li>
-        <li>
-          <svg class="feather text-indigo-600 mr-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-            <polyline points="22 4 12 14.01 9 11.01"/>
-          </svg>
-          From just $6/mo after the trial
-        </li>
-      </ul>
+      <%= error_tag f, :name %>
     </div>
+    <div class="my-4">
+      <div class="flex justify-between">
+      <%= label f, :email, class: "block text-sm font-medium text-gray-700" %>
+      <p class="text-xs text-gray-500 mt-1">No spam, guaranteed.</p>
+      </div>
+      <div class="mt-1">
+        <%= email_input f, :email, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md", placeholder: "example@email.com" %>
+      </div>
+      <%= error_tag f, :email %>
+    </div>
+
+    <div class="my-4">
+      <div class="flex justify-between">
+      <%= label f, :password, class: "block text-sm font-medium text-gray-700" %>
+      <p class="text-xs text-gray-500 mt-1">Min 6 characters</p>
+      </div>
+      <div class="mt-1">
+        <%= password_input f, :password, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+      </div>
+      <%= error_tag f, :password %>
+    </div>
+
+    <div class="my-4">
+      <%= label f, :password_confirmation, class: "block text-sm font-medium text-gray-700" %>
+      <div class="mt-1">
+        <%= password_input f, :password_confirmation, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+      </div>
+      <%= error_tag f, :password_confirmation %>
+    </div>
+
+    <%= if PlausibleWeb.Captcha.enabled?() do %>
+      <div class="mt-4">
+        <div class="h-captcha" data-sitekey="<%= PlausibleWeb.Captcha.sitekey() %>"></div>
+        <%= if assigns[:captcha_error] do %>
+          <div class="text-red-500 text-xs italic mt-3"><%= @captcha_error %></div>
+        <% end %>
+        <script src="https://hcaptcha.com/1/api.js" async defer></script>
+      </div>
+    <% end %>
+
+    <%= submit "Start my free trial →", class: "button mt-4 w-full" %>
+
+    <p class="text-center text-gray-600 text-xs mt-4">
+      Already have an account? <%= link("Log in", to: "/login", class: "underline text-gray-800") %> instead.
+    </p>
+  <% end %>
+  <div class="pt-12 pl-8 hidden md:block">
+    <%= render(PlausibleWeb.AuthView, "_onboarding_steps.html", current_step: 0) %>
   </div>
 </div>
